[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/godot-rollback-netcode/NetworkTimer.gd" type="Script" id=1]
[ext_resource path="res://src/Attacks/Kick.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 114, 99 )

[node name="Kick" type="Area2D" groups=["hurtbox", "network_sync"]]
script = ExtResource( 2 )

[node name="AttackVisualBox" type="Sprite" parent="."]
visible = false
position = Vector2( 116, -98.75 )
scale = Vector2( 3.625, 3.10156 )
texture = ExtResource( 3 )

[node name="StartupTimer" type="Node" parent="."]
script = ExtResource( 1 )
wait_ticks = 11

[node name="KickTimer" type="Node" parent="."]
script = ExtResource( 1 )
wait_ticks = 35

[node name="HurtboxCollision" type="CollisionShape2D" parent="."]
position = Vector2( 115, -99 )
shape = SubResource( 1 )

[connection signal="timeout" from="StartupTimer" to="." method="_on_StartupTimer_timeout"]
[connection signal="timeout" from="KickTimer" to="." method="_on_KickTimer_timeout"]
